add getProduct byName byType, putProduct, putGift