@@ -8,7 +8,6 @@ import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.math.BigDecimal;
 import java.util.Base64;
 import java.util.List;
 
@@ -57,7 +56,7 @@ public class GiftServiceImp implements GiftService {
     @Transactional
     public int putGift(GiftDTO giftDTO) {
         if (giftRepository.findAllByName(giftDTO.getName()).size() == 1) {
-            Gifts gift = giftRepository.findAllByName(giftDTO.getName()).get(0);
+            Gifts gift = giftRepository.findAllByName(giftDTO.getName()).getFirst();
             gift.setPoint(giftDTO.getPoint());
             gift.setQuantity(giftDTO.getQuantity());
             return 0;
